restructured directories, updated index.html, app.py now runs here

--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Welcome to DungeonMind</h1>
-    <p>This is the landing page.</p>
+    <img src="static/images/DungeonMindLogo.png" alt="DungeonMind Logo">
+
     <a href="/storegenerator">Go to StoreGenerator</a>
 </body>
 </html>
